--- a/gate/platformio.ini
+++ b/gate/platformio.ini
@@ -10,7 +10,7 @@
 [env:gate-arduino]
 platform = atmelavr
 framework = arduino
-board = uno
+board = megaatmega2560
 lib_deps =
   Nanopb@0.3.9
   ArduinoMqtt@1.5.0
