--- a/gate-server/pom.xml
+++ b/gate-server/pom.xml
@@ -14,9 +14,10 @@
 
         <maven-compiler-plugin.version>3.8.0</maven-compiler-plugin.version>
 
-        <org.eclipse.paho.client.mqttv3.version>1.2.0</org.eclipse.paho.client.mqttv3.version>
-        <protobuf-java.version>3.6.1</protobuf-java.version>
+        <org.eclipse.paho.client.mqttv3.version>1.2.1</org.eclipse.paho.client.mqttv3.version>
+        <protobuf-java.version>3.7.1</protobuf-java.version>
         <logback-classic.version>1.2.3</logback-classic.version>
+        <slf4j.version>1.7.26</slf4j.version>
     </properties>
 
     <dependencies>
@@ -31,9 +32,20 @@
             <version>${protobuf-java.version}</version>
         </dependency>
         <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>${slf4j.version}</version>
+        </dependency>
+        <dependency>
             <groupId>ch.qos.logback</groupId>
             <artifactId>logback-classic</artifactId>
             <version>${logback-classic.version}</version>
+            <scope>runtime</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>jul-to-slf4j</artifactId>
+            <version>${slf4j.version}</version>
         </dependency>
     </dependencies>
 
