--- a/gate-server/pom.xml
+++ b/gate-server/pom.xml
@@ -10,12 +10,13 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <java.version>1.8</java.version>
+        <java.version>11</java.version>
 
         <maven-compiler-plugin.version>3.8.0</maven-compiler-plugin.version>
+        <protobuf-maven-plugin.version>0.6.1</protobuf-maven-plugin.version>
 
         <org.eclipse.paho.client.mqttv3.version>1.2.1</org.eclipse.paho.client.mqttv3.version>
-        <protobuf-java.version>3.7.1</protobuf-java.version>
+        <protobuf-java.version>3.8.0</protobuf-java.version>
         <logback-classic.version>1.2.3</logback-classic.version>
         <slf4j.version>1.7.26</slf4j.version>
     </properties>
@@ -66,7 +67,7 @@
             <plugin>
                 <groupId>org.xolstice.maven.plugins</groupId>
                 <artifactId>protobuf-maven-plugin</artifactId>
-                <version>0.6.1</version>
+                <version>${protobuf-maven-plugin.version}</version>
                 <configuration>
                     <protocExecutable>protoc</protocExecutable>
                 </configuration>
